<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/now_playing"
        android:enabled="true"
        android:icon="@drawable/ic_today_black_24dp"
        android:title="@string/now_playing"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/up_coming"
        android:enabled="true"
        android:icon="@drawable/ic_replay_black_24dp"
        android:title="@string/up_coming"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_border_black_24dp"
        android:title="@string/favorite"
        app:showAsAction="collapseActionView" />
    <item
        android:id="@+id/search_movie"
        android:enabled="true"
        android:icon="@drawable/ic_search_black_24dp"
        android:title="@string/search_movie"
        app:showAsAction="collapseActionView" />
</menu>